--- a/public/src/css/feed.css
+++ b/public/src/css/feed.css
@@ -9,6 +9,8 @@
   background: white;
   text-align: center;
   display: none;
+  transform: translateY(100vh);
+  transition: transform 0.3s;
 }
 
 .main-image {
@@ -28,4 +30,37 @@
 .input-section {
   display: block;
   margin: 10px auto;
+}
+
+.shared-moment-card.mdl-card {
+  margin: 10px auto;
+  width: 270px;
+}
+
+@media (min-width: 600px) {
+  .shared-moment-card.mdl-card {
+    width: 400px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .shared-moment-card.mdl-card {
+    width: 45%;
+  }
+}
+
+.shared-moment-card .mdl-card__title {
+  height: 140px;
+}
+
+@media (min-height: 700px) {
+  .shared-moment-card .mdl-card__title {
+    height: 160px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .shared-moment-card .mdl-card__title {
+    height: 200px;
+  }
 }
